hphp/hack/test/typecheck/require_once_strict.php.exp
File "require_once_strict.php", line 2, characters 6-17:
Parse error: require_once is supported only as a toplevel declaration (Parsing[1002])
