hphp/hack/test/typecheck/require_once_strict.php
<?hh
echo(require_once('baz.php'));
